--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>
     Iva's NEW website
   </h1>
-  <a href = "https://ivamiletic7.github.io" title = "View main site for this class"> Click here </a> 
+  <a href = "https://ivamiletic7.github.io/index.html" title = "View my project 1 page"> Click here </a> 
 </body>
 
   
