--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <h1>
     Iva's NEW website
   </h1>
-  <a href = "https://ivamiletic7.github.io/project-1.html" title = "View my project 1 page"> Click here </a> 
+  <a href = "https://ivamiletic7.github.io/project-1.html" title = "View my project 1 page"> Click here </a>
+  <h1> I lost my keys in a narrow hole</h1>
 </body>
 
   
