--- a/project-1.html
+++ b/project-1.html
@@ -1,13 +1,28 @@
 <html>
   
 <head>
+
+
   <title>
     Project 1: Letterform
   </title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<div id = "letterform-character"> S &amp: </div>
+
+<a href="project-1.html"> Click here </a>
+
+<div id = "letterform-character"> CM </div>
+
 <h1> Cormorant Garamond </h1>
   <p> Cormorant is a free display type family developed by Christian Thalmann. The project currently comprises a total of 45 font files spanning 9 different visual
   styles (Roman, Italic, Infant, Infant Italic, Garamond, Garamond Italic, Upright Cursive, Small Caps, and Unicase) and 5 weights (Light, Regular, Medium, SemiBold
@@ -16,7 +31,24 @@
   the designs. Most glyphs were drawn from scratch; when he needed guidance on a specific character, he searched for the term Garamond and skimmed through the results 
   for a general impression. </p>
 
+<div class = 'leftcorner'>
+  <div class = 'image'>
+    <img src= "city.jpg"> 
+  </div>
+  <div class = 'myname'>
+    <h5>Iva Miletic</h5>
+    <h6>Goshen College Student</h6>
+  </div>
 
+</div>
+
+<div class = "rightcorner">
+  <h7> SOURCES </h7>
+  <p class = 'sources'>
+    Google Fonts, 
+    https://fonts.google.com/specimen/Cormorant+Garamond/about?query=gar
+  </p>
+</div>
 
     
 </body>
