--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <html>
-  <head>
-    <title> Iva's NEW website </title>
-  </head>
+    <head>
+        <!-- Italiana and Inria Serif Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,400;1,700&family=Italiana&display=swap" rel="stylesheet">
+       
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
-  <h1>
-    Iva's NEW website
-  </h1>
-  <a href = "https://ivamiletic7.github.io/project-1.html" title = "View my project 1 page"> Click here </a>
-  <h1> I lost my keys in a narrow hole</h1>
-  <h1>Hello</h1>
-</body>
+    <body>
+        <section id="first-section">
+            <div class="flex chunck"> 
+                <div>
+                    <h1>Section One</h1>
+                    <p> This is the paragraph </p> 
 
-  
+                </div>
+
+                <div class="image"> 
+
+                </div>
+
+
+            </div>
+           
+
+        </section>
+        <section id="second-section">
+            <h1>Section Two</h1>
+        </section>
+        <section id="third-section">
+            <h1>Section Three</h1>
+        </section>
+
+
+    </body>
+
 </html>
