--- a/project2/austria.html
+++ b/project2/austria.html
@@ -56,8 +56,8 @@
     </section>
 
 <footer id="austria-footer">
-    <p>SOURCES <br>
-    
+    <p class="sources"><b>SOURCES</b><br>
+    <i>Muza. “St. Stephen’s Cathedral Vienna - Stephansdom.”, <a id="austria-src" href="https://www.viennaitineraries.com/St_Stephens_Cathedral.html#:~:text=There%20is%20a%20famous%20bell,chimed%20church%20bell%20in%20Europe.&text=There%20are%20colorful%20tiles%20covering,of%20the%20city%20of%20Vienna.">https://www.viennaitineraries.com/St_Stephens_Cathedral.html#:~:text=There%20is%20a%20famous%20bell,<br>chimed%20church%20bell%20in%20Europe.&text=There%20are%20colorful%20tiles%20covering,of%20the%20city%20of%20Vienna.</a></i>
     </p>
 </footer>
 
