--- a/project2/greece.html
+++ b/project2/greece.html
@@ -57,8 +57,8 @@
         </section>
 
     <footer id="greece-footer">
-        <p>SOURCES <br>
-        “Keri Caves: Visit These Spectacular Caves by Boat in 2023.” Visit Our Greece, 9 Dec. 2022, <a href="https://visitourgreece.com/things_to_do/keri-caves/#:~:text=Near%20to%20the%20village%20of,a%20boat%20without%20a%20licence.">https://visitourgreece.com/things_to_do/keri-caves/#:~:text=Near%20to%20the%20village%20of,a%20boat%20without%20a%20licence.</a>
+        <p class="sources"><b>SOURCES</b><br>
+        <i>“Keri Caves: Visit These Spectacular Caves by Boat in 2023.” Visit Our Greece, 9 Dec. 2022, <a href="https://visitourgreece.com/things_to_do/keri-caves/#:~:text=Near%20to%20the%20village%20of,a%20boat%20without%20a%20licence.">https://visitourgreece.com/things_to_do/keri-caves/#:~:text=Near%20to%20the%20village%20of,a%20boat%20without%20a%20licence.</a></i>
         </p>
     </footer>
 
