--- a/project2/serbia.html
+++ b/project2/serbia.html
@@ -55,8 +55,8 @@
     </section>
 
 <footer id="serbia-footer">
-    <p>SOURCES <br>
-    
+    <p class="sources"><b>SOURCES</b><br>
+        <i>“The Church of Saint Sava, the Orthodox Heart of Belgrade.” <a href="https://www.serbia.com/church-saint-sava-orthodox-heart-belgrade/">https://www.serbia.com/church-saint-sava-orthodox-heart-belgrade/</a></i>
     </p>
 </footer>
 
