--- a/project2/index.html
+++ b/project2/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Italiana and Inria Serif Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +41,7 @@
                     menu.style.display = 'none';
                 }
             });
-        </script>
-       
+        </script> 
+
     </body>
 </html>
