UPDATED FINAL version
I corrected slideId.

--- a/project2/greece.html
+++ b/project2/greece.html
@@ -95,7 +95,7 @@
     <script>
         // JS slide show
         let slideIndex = [1,1];
-        let slideId = ["mySlides1", "mySlides2"]
+        let slideId = ["mySlides1"]
             showSlides(1, 0);
             showSlides(1, 1);
 
